tests/derivation/inputvalidation/non-gen-target-type/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of list. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:1
 10 |   MkY : Y Int String
 11 | 
 12 | --- Non-Gen type ---
 13 | 
 14 | list : List Int
             ^^^^^^^^

Error: While processing right hand side of list'. Error during reflection: The result type of the generator function must be of type "`Gen MaybeEmpty` of desired result"

ValidateInput:2
 13 | 
 14 | list : List Int
 15 | list = deriveGen
 16 | 
 17 | list' : Fuel -> List Int
                      ^^^^^^^^

Error: While processing right hand side of y. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:3
 16 | 
 17 | list' : Fuel -> List Int
 18 | list' = deriveGen
 19 | 
 20 | y : Y Int String
          ^^^^^^^^^^^^

Error: While processing right hand side of y'. Error during reflection: The result type of the generator function must be of type "`Gen MaybeEmpty` of desired result"

ValidateInput:4
 19 | 
 20 | y : Y Int String
 21 | y = deriveGen
 22 | 
 23 | y' : Fuel -> Y Int String
                   ^^^^^^^^^^^^

